--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <p class="footer-text">
-                Зроблено з любов'ю
-            </p>
-            <img class="footer-image" src="/Images/footer-img.png" alt="Піца яка вийшла">
+            <div class="wrapper">
+                <p class="footer-text">
+                    Зроблено з любов'ю
+                </p>
+                <img class="footer-image" src="Images/footer-img.png" alt="Вироблена вами піца">
+            </div>
         </div>
     </footer>
 </body>
