Fix HTML and CSS

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <a class="header-logo-link" href="#">
                 <img class="header-image" src="Images/logo.png" alt="Логотип">
             </a>
-            <ul class="header list-ul">
-                <li class="header item">
+            <ul class="header-list">
+                <li class="header-item">
                     <a class="header-link">Про нас</a>
                 </li>
-                <li class="header item">
+                <li class="header-item">
                     <a class="header-link">Інгредієнти</a>
                 </li>
             </ul>
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section class="dough">
-            <div class="container dough-countainer">
+            <div class="container dough-container">
                 <div class="dough-wrap">
                     <h2 class="dough-title">Тобі знадобляться такі інгредієнти для приготування тіста:</h2>
                     <ul class="dough-list">
