Add new section, update CSS

--- a/index.html
+++ b/index.html
@@ -63,31 +63,83 @@
         <section class="filling">
             <div class="container filling-container">
                 <img class="filling-image" src="Images/filling.png" alt="Піца">
-                <h2 class="filling-title">Тобі знадобляться такі інгрідієнти для начинки</h2>
-                <ul class="filling-list">
-                    <li class="filling-item">кетчуп,</li>
-                    <li class="filling-item">твердий сир,</li>
-                    <li class="filling-item">шинка/салямі,</li>
-                    <li class="filling-item">орегано,</li>
-                    <li class="filling-item">чорні оливки.</li>
-                </ul>
-                <p class="filling-text">
-                    Змасти корж кетчупом. Натри сир та злегка присип ним тісто. Приправ орегано — спеція додасть піці
-                    духмяного аромату. Поріж шинку/салямі невеличкими шматочками та рівномірно виклади на піцу. Поріж
-                    чорні оливки кружальцями, виклади на піцу. Розігрій духовку до 180 °С і запікай піцу 15-20 хвилин.
-                    Присип натертим сиром та відправ у духовку ще на 5 хвилин. Головне — слідкуй, аби піца не підгоріла.
-                </p>
+                <div class="filling-wrap">
+                    <h2 class="filling-title">Тобі знадобляться такі інгрідієнти для начинки</h2>
+                    <ul class="filling-list">
+                        <li class="filling-item">кетчуп,</li>
+                        <li class="filling-item">твердий сир,</li>
+                        <li class="filling-item">шинка/салямі,</li>
+                        <li class="filling-item">орегано,</li>
+                        <li class="filling-item">чорні оливки.</li>
+                    </ul>
+                    <p class="filling-text">
+                        Змасти корж кетчупом. Натри сир та злегка присип ним тісто. Приправ орегано — спеція додасть
+                        піці
+                        духмяного аромату. Поріж шинку/салямі невеличкими шматочками та рівномірно виклади на піцу.
+                        Поріж
+                        чорні оливки кружальцями, виклади на піцу. Розігрій духовку до 180 °С і запікай піцу 15-20
+                        хвилин.
+                        Присип натертим сиром та відправ у духовку ще на 5 хвилин. Головне — слідкуй, аби піца не
+                        підгоріла.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="bonus">
+            <div class="bonus bonus-container">
+                <div class="bonus-wrap">
+                    <h2 class="bonus-title">Цікаві факти про піцу</h2>
+                    <p class="bonus-text">
+                        Піца є найпопулярнішою стравою в світі, яку люблять і діти, і дорослі. Тому не дивно що з нею
+                        пов'язано безліч цікавих фактів.
+                    </p>
+                    <ol class="bonus-list">
+                        <li class="bonus-item">
+                            Піца спочатку була одною з страв для бідних людей. Її готували з
+                            досить простих інгредієнтів. Найчастіше це були коржики з грубого тісту з помідорами і
+                            спеціями.
+                        </li>
+                        <br>
+                        <li class="bonus-item">
+                            Вважається, що піцу вперше приготували в Італії, але країни по всьому світу розробили свої
+                            власні регіональні рецепти. Наприклад, в Бразилії кухаря додають в страву зелений горошок, а
+                            у Франції - смажені яйця.
+                        </li>
+                        <br>
+                        <li class="bonus-item">
+                            Піца займає почесне місце в Книзі Рекордів Гіннеса. Туди занесений працівник знаменитої на
+                            весь світ мережі ресторанів «Domino's». Він зміг приготувати 3 великі піци всього за 49,1
+                            секунду.
+                        </li>
+                        <br>
+                        <li class="bonus-item">
+                            У 2009 році в Італії було прийнято закон, який дозволяє готувати деякі рецепти піци виключно
+                            в Неаполі.
+                        </li>
+                        <br>
+                        <li class="bonus-item">
+                            Найрізноманітніші начинки для піци стали широко використовуватися в США і Канаді. Цікаво те,
+                            що в самій Італії класичними вважаються всього два види цієї страви - Маргарита і Маринара.
+                        </li>
+                        <br>
+                        <li class="bonus-item">
+                            Походження піци відносять до часів древніх греків і єгиптян, які готували її у вигляді коржа
+                            з ​​оливковою олією і спеціями.
+                        </li>
+                    </ol>
+                </div>
+                <img class="bonus-image" src="Images/bonus-img.png" alt="Піца">
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="wrapper">
+            <div class="footer-wrap">
                 <p class="footer-text">
                     Зроблено з любов'ю
                 </p>
-                <img class="footer-image" src="Images/footer-img.png" alt="Вироблена вами піца">
             </div>
+            <img class="footer-image" src="Images/footer-img.png" alt="Вироблена вами піца">
         </div>
     </footer>
 </body>
