made 5 section and fix

--- a/index.html
+++ b/index.html
@@ -95,40 +95,84 @@
                     </p>
                     <ol class="bonus-list">
                         <li class="bonus-item">
-                            Піца спочатку була одною з страв для бідних людей. Її готували з
-                            досить простих інгредієнтів. Найчастіше це були коржики з грубого тісту з помідорами і
-                            спеціями.
+                            Піца "Маргарита" названа на честь королеви Італії.
                         </li>
-                        <br>
                         <li class="bonus-item">
-                            Вважається, що піцу вперше приготували в Італії, але країни по всьому світу розробили свої
-                            власні регіональні рецепти. Наприклад, в Бразилії кухаря додають в страву зелений горошок, а
-                            у Франції - смажені яйця.
+                            У США щорічно споживається близько 3 мільярдів піц.
                         </li>
-                        <br>
                         <li class="bonus-item">
-                            Піца займає почесне місце в Книзі Рекордів Гіннеса. Туди занесений працівник знаменитої на
-                            весь світ мережі ресторанів «Domino's». Він зміг приготувати 3 великі піци всього за 49,1
-                            секунду.
+                            Перша піца в космосі була доставлена в 2001 році.
                         </li>
-                        <br>
                         <li class="bonus-item">
-                            У 2009 році в Італії було прийнято закон, який дозволяє готувати деякі рецепти піци виключно
-                            в Неаполі.
+                            В Італії створили найбільшу піцу площею 1200 м².
                         </li>
-                        <br>
                         <li class="bonus-item">
-                            Найрізноманітніші начинки для піци стали широко використовуватися в США і Канаді. Цікаво те,
-                            що в самій Італії класичними вважаються всього два види цієї страви - Маргарита і Маринара.
+                            В Японії популярна піца з кальмарами.
                         </li>
-                        <br>
                         <li class="bonus-item">
-                            Походження піци відносять до часів древніх греків і єгиптян, які готували її у вигляді коржа
-                            з ​​оливковою олією і спеціями.
+                            Прототипи піци існували ще в Давній Греції.
+                        </li>
+                        <li class="bonus-item">
+                            Піца родом з Італії, і її сучасний вигляд сформувався в Неаполі в кінці 19 століття.
+                        </li>
+                        <li class="bonus-item">
+                            Існує безліч видів піци, від класичної маргарити до піци з різними начинками, такими як
+                            морепродукти, м’ясо, овочі та навіть фрукти.
+                        </li>
+                        <li class="bonus-item">
+                            В Італії та США існує національний день піци, який святкується 9 лютого.
+                        </li>
+                        <li class="bonus-item">
+                            Піца є однією з найпопулярніших страв у світі, і її можна знайти практично в будь-якому
+                            куточку планети.
                         </li>
                     </ol>
                 </div>
                 <img class="bonus-image" src="Images/bonus-img.png" alt="Піца">
+            </div>
+        </section>
+        <section class="contact">
+            <div class="contact contact-container">
+                <img class="contact-image" src="Images/contact-img.jpg" alt="Адреса піцерії">
+                <div class="hero-wrap">
+                    <h2 class="contact-title">Захотілося смачної піци? Pizza day рішення вашої проблеми!</h2>
+                    <h3 class="contact-subtitle">Контакта інформація</h3>
+                    <ul class="contact-list">
+                        <li class="contact-item">Номер телефону: +39012345678</li>
+                        <li class="contact-item">E-mail: pizzaday@gmail.com</li>
+                        <li class="contact-item"> Адреса: вулиця Отакара Яроша, 21, Харків, Харківська область, 61000</li>
+                    </ul>
+                    <p class="contact-text">
+                        Гарний та зручний інтерфейс додатку, швидка доставка, щонедільні знижки на різні товари, багато
+                        різних страв в меню окрім піци, дисконт картки, доставка по Харкову та області.
+                    </p>
+                    <h2 class="contact-title">Замовлення</h2>
+                    <form class="contact-form">
+                        <label class="form-label">
+                            <input class="form-item" type="text" placeholder="Ім'я">
+                        </label>
+                        <label class="form-label">
+                            <input class="form-item" type="text" placeholder="Фамілія">
+                        </label>
+                        <label class="form-label"></label>
+                            <input class="form-item" type="text" placeholder="Адреса">
+                        </label>
+                        <label class="form-label">
+                            <input class="form-item" type="email" placeholder="E-mail">
+                        </label>
+                        <label class="form-label">
+                            <input class="form-item" type="tel" placeholder="номер телефону">
+                        </label>
+                        <label class="form-label">
+                            <textarea class="form-item" placeholder="Ваш заказ"></textarea>
+                        </label>
+                        <label class="form-label">
+                            <input class="form-item" type="datetime-local">
+                        </label>
+                        <button class="form-sumbit" type="submit">Підтвердити</button>
+                        <button class="form-reset" type="reset">Збросити</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
