--- a/index.html
+++ b/index.html
@@ -85,50 +85,50 @@
                 </div>
             </div>
         </section>
-        <section class="bonus">
-            <div class="bonus bonus-container">
-                <div class="bonus-wrap">
-                    <h2 class="bonus-title">Цікаві факти про піцу</h2>
-                    <p class="bonus-text">
+        <section class="fact">
+            <div class="contianer fact-container">
+                <div class="fact-wrap">
+                    <h2 class="fact-title">Цікаві факти про піцу</h2>
+                    <p class="fact-text">
                         Піца є найпопулярнішою стравою в світі, яку люблять і діти, і дорослі. Тому не дивно що з нею
                         пов'язано безліч цікавих фактів.
                     </p>
-                    <ol class="bonus-list">
-                        <li class="bonus-item">
+                    <ol class="fact-list">
+                        <li class="fact-item">
                             Піца "Маргарита" названа на честь королеви Італії.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             У США щорічно споживається близько 3 мільярдів піц.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             Перша піца в космосі була доставлена в 2001 році.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             В Італії створили найбільшу піцу площею 1200 м².
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             В Японії популярна піца з кальмарами.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             Прототипи піци існували ще в Давній Греції.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             Піца родом з Італії, і її сучасний вигляд сформувався в Неаполі в кінці 19 століття.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             Існує безліч видів піци, від класичної маргарити до піци з різними начинками, такими як
                             морепродукти, м’ясо, овочі та навіть фрукти.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             В Італії та США існує національний день піци, який святкується 9 лютого.
                         </li>
-                        <li class="bonus-item">
+                        <li class="fact-item">
                             Піца є однією з найпопулярніших страв у світі, і її можна знайти практично в будь-якому
                             куточку планети.
                         </li>
                     </ol>
                 </div>
-                <img class="bonus-image" src="Images/bonus-img.png" alt="Піца">
+                <img class="fact-image" src="Images/bonus-img.png" alt="Піца">
             </div>
         </section>
         <section class="contact">
@@ -138,7 +138,7 @@
                     <h2 class="contact-title">Захотілося смачної піци? Pizza day рішення вашої проблеми!</h2>
                     <h3 class="contact-subtitle">Контакта інформація</h3>
                     <ul class="contact-list">
-                        <li class="contact-item">Номер телефону: +39012345678</li>
+                        <li class="contact-item">Номер телефону: +38012345678</li>
                         <li class="contact-item">E-mail: pizzaday@gmail.com</li>
                         <li class="contact-item"> Адреса: вулиця Отакара Яроша, 21, Харків, Харківська область, 61000</li>
                     </ul>
@@ -164,10 +164,10 @@
                             <input class="form-item" type="tel" placeholder="номер телефону">
                         </label>
                         <label class="form-label">
-                            <textarea class="form-item" placeholder="Ваш заказ"></textarea>
+                            <textarea class="form-textarea" placeholder="Ваш заказ"></textarea>
                         </label>
                         <label class="form-label">
-                            <input class="form-item" type="datetime-local">
+                            <input class="form-item" type="time">
                         </label>
                         <button class="form-sumbit" type="submit">Підтвердити</button>
                         <button class="form-reset" type="reset">Збросити</button>
