fix design bugs and add new navigation element

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             </a>
             <ul class="header-list">
                 <li class="header-item">
-                    <a class="header-link">Про нас</a>
+                    <a class="header-link" href="#">Про нас</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link">Інгредієнти</a>
+                    <a class="header-link" href="#">Інгредієнти</a>
+                </li>
+                <li class="header-item">
+                    <a class="header-link" href="#">Замовлення</a>
                 </li>
             </ul>
         </div>
@@ -146,7 +149,8 @@
                         Гарний та зручний інтерфейс додатку, швидка доставка, щонедільні знижки на різні товари, багато
                         різних страв в меню окрім піци, дисконт картки, доставка по Харкову та області.
                     </p>
-                    <h2 class="contact-title">Замовлення</h2>
+                    <h2 class="contact-order-title">Замовлення</h2>
+                    <div class="contact-order">
                     <form class="contact-form">
                         <label class="form-label">
                             <input class="form-item" type="text" placeholder="Ім'я">
@@ -172,6 +176,7 @@
                         <button class="form-sumbit" type="submit">Підтвердити</button>
                         <button class="form-reset" type="reset">Збросити</button>
                     </form>
+                    </div>
                 </div>
             </div>
         </section>
