added an ID for moving around the page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <a class="header-link" href="#">Про нас</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link" href="#">Інгредієнти</a>
+                    <a class="header-link" href="#eat">Інгредієнти</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link" href="#">Замовлення</a>
+                    <a class="header-link" href="#order">Замовлення</a>
                 </li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
         <section class="dough">
             <div class="container dough-container">
                 <div class="dough-wrap">
-                    <h2 class="dough-title">Тобі знадобляться такі інгредієнти для приготування тіста:</h2>
+                    <h2 class="dough-title" id="eat">Тобі знадобляться такі інгредієнти для приготування тіста:</h2>
                     <ul class="dough-list">
                         <li class="dough-item">мука — 300 г,</li>
                         <li class="dough-item">вода — 220 мл,</li>
@@ -149,7 +149,7 @@
                         Гарний та зручний інтерфейс додатку, швидка доставка, щонедільні знижки на різні товари, багато
                         різних страв в меню окрім піци, дисконт картки, доставка по Харкову та області.
                     </p>
-                    <h2 class="contact-order-title">Замовлення</h2>
+                    <h2 class="contact-order-title" id="order">Замовлення</h2>
                     <div class="contact-order">
                     <form class="contact-form">
                         <label class="form-label">
