--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section class="contact">
             <div class="contact contact-container">
                 <img class="contact-image" src="Images/contact-img.jpg" alt="Адреса піцерії">
-                <div class="hero-wrap">
+                <div class="contact-wrap">
                     <h2 class="contact-title">Захотілося смачної піци? Pizza day рішення вашої проблеми!</h2>
                     <h3 class="contact-subtitle">Контакта інформація</h3>
                     <ul class="contact-list">
