--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </section>
         <section class="fact">
-            <div class="contianer fact-container">
+            <div class="container fact-container">
                 <div class="fact-wrap">
                     <h2 class="fact-title">Цікаві факти про піцу</h2>
                     <p class="fact-text">
@@ -135,7 +135,7 @@
             </div>
         </section>
         <section class="contact">
-            <div class="contact contact-container">
+            <div class="container contact-container">
                 <img class="contact-image" src="Images/contact-img.jpg" alt="Адреса піцерії">
                 <div class="contact-wrap">
                     <h2 class="contact-title">Захотілося смачної піци? Pizza day рішення вашої проблеми!</h2>
